keycloak/keycloak-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  # namespace: keycloak
spec:
  selector:
    istio: ingress-gateway
  servers:
    - hosts:
        # - keycloak.local.dev
        - 'keycloak.hayden.com'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
