keycloak/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  # namespace: keycloak
spec:
  gateways:
    - keycloak-gateway
  hosts:
    # - 'keycloak.local.dev'
    # - 'localhost'
    - 'keycloak.hayden.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak.keycloak.svc.cluster.local
            port:
              number: 80
